Fix body contnet overflow bug on mobile view

--- a/tutangle-responsive/css/style.css
+++ b/tutangle-responsive/css/style.css
@@ -26,8 +26,8 @@
 }
 .mobile-search-button {
     padding: 7px;
-    border-radius: 5px;
-    background-color: #275056;
+    border-radius: 15px;
+    background-color: #7dd9e8;
 }
 .mobile-search-button:hover {
     background-color: #caeff7;
@@ -103,7 +103,7 @@
 .status {
     font-size: 14px;
     font-weight: bold;
-    width: 80%;
+    max-width: 80%;
 }
 .each-post img {
     height: 45px;
